# LILYGO-T-DISPLAY-S3-ESP-IDF-v5.X

./: CMakeLists.txt  README.md  code.code-workspace  sdkconfig  sdkconfig.defaults.tdisplays3  sdkconfig.old
main/: CMakeLists.txt  config.h  display_port.c  display_port.h  lvgl_config.h  lvgl_port.c  lvgl_port.h  lvgl_ui.hpp  main.cpp  product_pins.h  temp_sensor_cpu.cpp  temp_sensor_cpu.h
modules/cli-tdisplays3/: CMakeLists.txt
modules/cli-tdisplays3/include/: config.h
modules/cli-tdisplays3/src/: cli.c  init.c
modules/filesystem-tdisplays3/: CMakeLists.txt
modules/filesystem-tdisplays3/include/: defines.h  filesystem.h
modules/filesystem-tdisplays3/src/: FAT_fs.c  LITTLE_fs.c  SPIF_fs.c  filesystem.c
modules/simple-cli-tdisplays3-v001/: CMakeLists.txt
modules/simple-cli-tdisplays3-v001/include/: simple_cli.h
modules/simple-cli-tdisplays3-v001/src/: init.c  simple_cli.c
